--- a/mobile/package.json
+++ b/mobile/package.json
@@ -23,7 +23,8 @@
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^8.0.3",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^2.0.15"
+    "react-navigation-stack": "^2.0.15",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
